# hyprlang-fmt

./: .envrc  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  env.sh  flake.nix  help.txt  package.nix  project.nix  shell.nix
.github/workflows/: ci.yaml
nix/: dev-shell.nix  generated.nix  package.nix  project.nix
release/secrets/: .sops.yaml  secrets.yaml
scripts/direnv/: build.sh  rust-src-path.sh  update-generated-nix.sh  watch-files.sh
src/: config.rs  format.rs  main.rs  node.rs  parse.rs  state.rs
src/cli/: args.rs  mod.rs  run.rs
src/components/: block.rs  category.rs  command.rs  comment.rs  file.rs  mod.rs  node.rs  variable_assignment.rs
src/grammar/: grammar.pest  mod.rs
src/parsed/: format.rs  line.rs  mod.rs
src/pest/: grammar.pest
src/state/: block.rs  config.rs  mod.rs
testbed/hypr/: hypridle.conf  hyprland.conf
