[package]
name = "hyprlang-fmt"
description = "A formatter for the hyprlang configuration language"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://www.github.com/jkhmtx/hyprland-fmt.git"
keywords = ["hyprlang", "hyprland", "format", "fmt"]
categories = [
  "command-line-utilities",
  "development-tools",
  "parser-implementations",
]

[dependencies]
