[package]
name = "hyprlang-fmt"
description = "A formatter for the hyprlang configuration language"
version = "1.0.1"
edition = "2024"
license = "GPL-3.0"
repository = "https://www.github.com/jkhmtx/hyprland-fmt.git"
keywords = ["hyprlang", "hyprland", "format", "fmt"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
pest = "2.8.1"
pest_derive = "2.8.1"
